name:                yesod-ghcjs
version:             0.1.0.0
synopsis:            Utilities for using the GHCJS Haskell-to-JS compiler with Yesod.
description:         This is a work-in-progress.
homepage:            http://github.com/fpco/yesod-ghcjs#readme
license:             MIT
license-file:        LICENSE
author:              FP Complete Developers
maintainer:          dev@fpcomplete.com
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Yesod.GHCJS
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , conduit
                     , conduit-combinators >= 1
                     , conduit-extra
                     , directory
                     , file-embed
                     , filepath
                     , resourcet
                     , template-haskell
                     , temporary
                     , th-lift
                     , yesod-core
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fpco/yesod-ghcjs
